# cuda-compression

./: .gitignore  .gitmodules  Makefile  README.md
device/: CMakeLists.txt  device.cuh
device/algo/huffman/: huffman.cu  huffman.cuh
device/algo/lempel_ziv_welch/: lempel_ziv_welch.cu  lempel_ziv_welch.cuh
device/base/: device.cu
device/device_specific/base/: device_specific.cu
device/device_specific/gtx1660ti/: device_specific.cu
device/include/: device.cu  device.cuh  device_specific.cuh
doc/: activity_workflow.uml  software_modules.uml  system_abstraction.uml  use_case.uml
host/: CMakeLists.txt  host.cu  main.cpp
scripts/: build.py  clean_build.py  move_app_to_bin.py
src/include/: Common.cuh
